Modal + cambios api

--- a/website/policia/static/policia/css/buscar.css
+++ b/website/policia/static/policia/css/buscar.css
@@ -37,7 +37,7 @@ fieldset .radio-inline {
     display: block;
 }
 
-.twitter-name, .twitter-details {
+.twitter-name, .twitter-location {
     height: 20px;
 }
 
