--- a/website/policia/templates/policia/buscar-texto.html
+++ b/website/policia/templates/policia/buscar-texto.html
@@ -128,9 +128,8 @@
 
 </div>
 
-{% include 'policia/modal-tarea.html' %}
-
-<a href="#custom-modal" class="btn btn-primary waves-effect waves-light"
+<a
+    href="#custom-modal" class="btn btn-primary waves-effect waves-light"
     data-animation="blur" data-plugin="custommodal"
     data-overlaySpeed="100" data-overlayColor="#36404a">
     Show Me
