Notificar por email via ajax

--- a/website/policia/templates/policia/base.html
+++ b/website/policia/templates/policia/base.html
@@ -39,11 +39,9 @@
 
             <!-- LOGO -->
             <div class="topbar-left">
-                <div class="user-detail">
-
+                <div class="user-detail hidden-xs">
                     <h5 class="m-t-0 m-b-0"><i class="md md-perm-identity"></i> {{ nombre }}</h5>
                     <h6>{{ email }}</h6>
-
                 </div>
             </div>
 
