--- a/website/policia/templates/policia/tareas.html
+++ b/website/policia/templates/policia/tareas.html
@@ -1,1 +1,77 @@
 {% extends 'policia/base.html' %}
+
+{% block content %}
+
+<div class="col-lg-12">
+    <div class="panel panel-border panel-primary">
+        <div class="panel-heading">
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-2">
+                    <strong>Similares a: </strong><br/>
+                    @p_molins
+                </div>
+                <div class="col-md-2">
+                    <strong>Por: </strong><br/>
+                    Forma de hablar
+                </div>
+                <div class="col-md-2">
+                    <strong>En: </strong><br/>
+                    Twitter global
+                </div>
+                <div class="col-md-2">
+                    <strong>Idioma: </strong><br/>
+                    EN
+                </div>
+
+                <div class="col-md-2">
+                    <strong>Máx. Resultados: </strong><br/>
+                    100
+                </div>
+
+                <div class="col-md-2 text-center">
+                    <a href="#" class="btn btn-primary">Ver resultados</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="col-lg-12">
+    <div class="panel panel-border panel-default">
+        <div class="panel-heading">
+        </div>
+        <div class="panel-body">
+            <div class="row">
+            <div class="col-md-2">
+                <strong>Similares a: </strong><br/>
+                @p_molins
+            </div>
+            <div class="col-md-2">
+                <strong>Por: </strong><br/>
+                Forma de hablar
+            </div>
+            <div class="col-md-2">
+                <strong>En: </strong><br/>
+                Twitter global
+            </div>
+            <div class="col-md-2">
+                <strong>Idioma: </strong><br/>
+                EN
+            </div>
+
+            <div class="col-md-2">
+                <strong>Máx. Resultados: </strong><br/>
+                100
+            </div>
+
+            <div class="col-md-2 text-center">
+                <strong>Procesando...</strong>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock content%}
