--- a/website/policia/templates/policia/tareas.html
+++ b/website/policia/templates/policia/tareas.html
@@ -25,7 +25,7 @@
                     {% if 'semantic' in tarea.tipo %}
                     Forma de hablar
                     {% else %}
-                    Temas de los que habla
+                    Temas
                     {% endif %}
                 </div>
                 <div class="col-md-2">
