Mostrar tareas de texto en el template de tareas

--- a/website/policia/templates/policia/buscar-texto.html
+++ b/website/policia/templates/policia/buscar-texto.html
@@ -29,6 +29,7 @@
                                     <label for="search-text">Buscar texto:  </label>
                                     <br/>
                                         <textarea
+                                            ng-model="searchText"
                                             class="form-control"id="search-text"
                                             name="search-text" maxlength="100"
                                             id="search-text" autofocus></textarea>
