Url genérica para acceder a los resultados de una tarea

--- a/website/policia/templates/policia/buscar-texto.html
+++ b/website/policia/templates/policia/buscar-texto.html
@@ -10,6 +10,7 @@
 {% block content %}
 
 <div
+    ng-cloak
     ng-app="policia"
     ng-controller="searchText"
     ng-init="updateSearchParams()">
