--- a/website/policia/templates/policia/buscar-similares.html
+++ b/website/policia/templates/policia/buscar-similares.html
@@ -10,6 +10,7 @@
 {% block content %}
 
 <div
+    ng-cloak
     ng-app="policia"
     ng-controller="searchSimilar"
     ng-init="updateSearchParams()">
