Arreglo bug en searchText()

--- a/website/policia/templates/policia/tareas.html
+++ b/website/policia/templates/policia/tareas.html
@@ -13,6 +13,7 @@
         {% endif %}
         ">
         <div class="panel-heading">
+            <a class="pull-right" href="#"><i class="ion-close-round"></i></a>
         </div>
         <div class="panel-body">
             <div class="row">
