--- a/website/policia/templates/policia/usuario-twitter.html
+++ b/website/policia/templates/policia/usuario-twitter.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!-- Template Detalles User Twitter -->
 <div class="col-sm-6 col-md-6 col-lg-4 text-left">
     <div class="card-box">
@@ -5,8 +7,7 @@
             <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-4 col-lg-4">
                 <p class="text-center">
                     <a href="https://twitter.com/{% verbatim %}{{ user.screen_name }}{% endverbatim %}/">
-                        <img class="twitter-thumbnail"
-                            src="https://twitter.com/{% verbatim %}{{ user.screen_name }}{% endverbatim %}/profile_image?size=original"/>
+                        <img class="twitter-thumbnail" src="https://twitter.com/{% verbatim %}{{ user.screen_name }}{% endverbatim %}/profile_image?size=original"/>
                     </a>
                 </p>
                 <p class="twitter-name text-center">
